--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,16 +69,16 @@ header nav ul li a:hover {
 
 
 .section-title {
-    color: var(--hover-color);
-    text-align: center;
+    color: yellow;
+    text-align: top;
     width: 80%;
-    font-size: 20px;
+    font-size: 25px;
     margin: 0 auto;
 
 }
 
 section {
-    padding: 30px;
+    padding: 30px 15px;
 }
 
 /* Footer Start */
@@ -97,6 +97,7 @@ footer {
 
 footer p {
     color: var(--hover-color);
+    text-align: left;
 }
 
 .hero {
@@ -116,27 +117,57 @@ footer p {
     font-size: 35px;
 }
 
+
+
 /* About me */
 
 .start {
     background-color: var(--secondary-color);
     display: flex;
+    justify-content:space-evenly;
+}
+.start p {
+    padding: 15px;
 }
 
 .start h2 {
+    position: top;
+}
 
+.start p {
+    color: purple;
 }
 .projects {
-    background-color: var(--favorite-color);
+    background-color: purple;
+}
+
+.project-titles {
     display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin: 10px;
+}
+
+project-titles h3 a:hover {
+    color: var(--hover-color);
 }
 
 .projects img {
+    border: solid var(--secondary-color);
     max-height: 200px;
     max-width: 300px;
     min-width: 300px;
+}
 
-    
+.projects img:hover {
+    border: solid var(--hover-color) 12px;
+    min-width: 415px;
+    min-height: 300px;
+
+}
+
+.contact p {
+    color: purple;
 }
 
 
@@ -146,4 +177,14 @@ footer p {
     header {
         padding-bottom: 0;
     }
+}
+
+@media screen and (max-width: 768px){
+    section {
+        padding: 10px 15px;
+    }
+}
+
+@media screen and (max-width: 575px){
+
 }
